# axio-hub-api

./: .dockerignore  .gitignore  Dockerfile  agent.py  main.py  pyproject.toml  requirements-prod.txt  server.py
modules/: auditoria.py  discovery.py  fluxos.py  pesquisa.py  writing.py
tools/: document_index.py  file_reader.py
